--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,302 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+* {
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+
+html,
+body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+.container {
+    width: 88%;
+    margin: auto;
+    border: 1px solid red;
+}
 
 
+/* header content */
+
+.head {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header nav {
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav a {
+    display: inline-block;
+    color: lightslategray;
+    text-decoration: none;
+}
+
+.head-main {
+    display: flex;
+    margin: 3%;
+    justify-content: space-evenly;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 40px;
+    margin-right: 11%;
+    margin-left: 15%;
+}
+
+.header img {
+    display: inline-block;
+    margin-left: 30%;
+}
+
+.button {
+    font-size: 20px;
+    width: 140px;
+    color: #000;
+    margin-left: 30%;
+    border: 1px solid black;
+}
+
+
+/* main content */
+
+.middle-img {
+    display: inline-block;
+    width: 100%;
+    margin: 0, 10%;
+}
+
+.upper-content {
+    border-top: 1px solid black;
+    display: flex;
+}
+
+.lower-content {
+    border-bottom: 1px solid black;
+    display: flex;
+}
+
+.features,
+.about {
+    width: 49%;
+    margin-bottom: 3%;
+    padding-top: 3%;
+}
+
+.services,
+.product,
+.vision {
+    width: 32%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.features,
+.product,
+.services {
+    margin-right: 15px;
+}
+
+.contact {
+    display: inline-block;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+footer {
+    text-align: center;
+    margin-top: 3%;
+}
+
+
+/*  -------------------services page-------vvvvvvvvvvvvvvvvv------- */
+
+.services-header-img {
+    margin-top: 5%;
+}
+
+.serv-header {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.serv-header h1 {
+    margin-top: 3%;
+    text-size-adjust: 150%;
+}
+
+.serv-header p {
+    margin: 2%;
+}
+
+.svc-main {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-bottom: 3%;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+}
+
+.svc-offer {
+    margin-top: 3%;
+    background-color: darkgrey;
+    padding: 3%;
+    width: 45%;
+    border-radius: 10px;
+}
+
+.svc-offer p {
+    margin: 5%;
+}
+
+.svc-lower {
+    display: flex;
+    justify-content: space-around;
+}
+
+.svc-bottom {
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+.svc-bottom ul {
+    list-style-type: square;
+    margin-top: 2%;
+}
+
+.services-info-img {
+    margin-top: 3%;
+    margin-left: 10%;
+}
+
+
+/*  -------------------services page--------^^^^^^^^^^^^^^^^^^^--- */
+
+
+/*  -------------------product page---------vvvvvvvvvvvvvvvvvvv----*/
+
+.prod-header-img {
+    margin-top: 5%;
+}
+
+.prod-header {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.prod-header h1 {
+    margin-top: 3%;
+    text-size-adjust: 150%;
+}
+
+.prod-header p {
+    margin: 2%;
+}
+
+.prod-main {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-bottom: 3%;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+}
+
+.prod-offer {
+    margin-top: 3%;
+    background-color: #BFE600;
+    padding: 3%;
+    width: 45%;
+    border-radius: 10px;
+}
+
+.prod-offer p {
+    margin: 5%;
+}
+
+.prod-lower {
+    display: flex;
+    justify-content: space-around;
+}
+
+.prod-bottom {
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+.prod-bottom ul {
+    list-style-type: square;
+    margin-top: 2%;
+}
+
+.prod-info-img {
+    margin-top: 3%;
+    margin-left: 10%;
+}
+
+
+/*  -------------------product page---------^^^^^^^^^^^^^^^^^^^----*/
+
+
+/*---------------------media queries-------vvvvvvvvvvvvvvvvvv-------*/
+
+
+/*
+@media(max-width: 800px) {
+    .head {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .header img {
+        display: inline-block;
+        margin-left: 30%;
+    }
+}
+
+@media(max-width: 500px) {
+    .head {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .header img {
+        display: inline-block;
+        margin-left: 30%;
+    }
+}
+*/
+
+
+/*---------------------media queries-------^^^^^^^^^^^^^^^^^^^-------*/
