--- a/css/index.css
+++ b/css/index.css
@@ -278,8 +278,8 @@ footer {
         align-items: center;
     }
     .header img {
-        display: inline-block;
-        margin-left: 30%;
+        display: none;
+        
     }
 }
 
@@ -288,13 +288,20 @@ footer {
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
+
     .header img {
-        display: inline-block;
-        margin-left: 30%;
+        display: none;
     }
+
+    header nav {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 */
 
