--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
                         }
                         
                         .container {
-                            width: 88%;
+                            width: 100%;
                             margin: auto;
                             /*border: 1px solid red; */
                         }
@@ -275,19 +275,24 @@
                         }
                         
                         @media(max-width: 500px) {
+                            .container {
+                                margin: 0;
+                            }
                             .head {
                                 width: 100%;
                                 display: flex;
                                 flex-direction: column-reverse;
                                 justify-content: center;
                                 align-items: center;
+                                margin: 0;
+                                padding: 0;
                             }
                             .head-main img {
                                 display: none;
                             }
                             nav {
                                 width: 100%;
-                                padding: 2%;
+                                padding: 0%;
                                 display: flex;
                                 flex-direction: column;
                                 justify-content: center;
@@ -295,7 +300,7 @@
                             }
                             nav a {
                                 border-bottom: 1px solid gray;
-                                padding: 2%;
+                                padding: 0%;
                                 width: 100%;
                                 text-align: center;
                             }
