changed the 500 query to 500px

--- a/css/index.css
+++ b/css/index.css
@@ -301,7 +301,7 @@
                             nav a {
                                 border-bottom: 1px solid gray;
                                 padding: 0%;
-                                width: 100%;
+                                width: 500px;
                                 text-align: center;
                             }
                             header {
